<resources>
    <string name="app_name">I-FOX-V1</string>

    //RELACIONADOS COM O PROJETO
    <string name="titulo_projeto">I-FOX</string>
    <string name="subtitulo_projeto">ensino digital moderno e dinâmico  </string>
    <string name="boas_vindas">BEM VINDO AO</string>

    //MENU DE NAVEGAÇÃO
    <string name="menu_home">HOME</string>
    <string name="menu_perfil">PERFIL</string>
    <string name="menu_feed">FEED</string>
    <string name="menu_loja">LOJA</string>
    <string name="menu_lembretes">LEMBRETES</string>

    //FORMULÁRIOS
    <string name="cadastre_se">CADASTRE-SE</string>
    <string name="continuar">Continuar</string>
    <string name="logar">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="usuario">USUÁRIO: </string>
    <string name="senha">SENHA: </string>
    <string name="dica_senha">Utilize pelo menos 8 dígitos, 1 número e 1 caractere especial</string>
    <string name="cadastresse">Não possui uma conta? Cadastre-se aqui </string>

    <string name="data_nasc">DATA DE NASCIMENTO</string>
    <string name="email">EMAIL</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_inicial_aluno">InicialAlunoActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_tela_principal_aluno">TelaPrincipalAluno</string>
    <string name="title_activity_tela_home_aluno">TelaHomeAluno</string>

    //TELA DE CADERNOS

    <string name="seus_cadernos">SEUS CADERNOS</string>
    <string name="criar_caderno">CRIAR CADERNO</string>
    <string name="sem_caderno">NENHUM CADERNO CADASTRADO, CRIE UM</string>
    <string name="novo_caderno">NOVO CADERNO</string>
    <string name="titulo">Título:</string>
    <string name="icone">Selecione um ícone::</string>
    <string name="descricao">Descrição:</string>
    <string name="salvar">Salvar</string>

    //TELA MATÉRIA

    //TELA RESUMOS AUDIO
    //referencia dos textos acima do botão gravar
    <string name="TVTitulo">Título do Áudio</string>
    <string name="TVIfox">I-FOX</string>
    <string name="TVData">Data</string>

    //referencia do botão gravar
    <string name="BTNGravar">GRAVAR</string>

    //referencia dos botões inferiores
    <string name="BTNReproduzir">REPRODUZIR</string>
    <string name="BTNSalvar">SALVAR</string>
    <string name="BTNDeletar">DELETAR</string>


    //REFERENCIAS DA TELA PERFIL

    <string name="textNome">Oi **********</string>
    <string name="textTexto">Aqui você pode ver e editar os dados do seu perfil:</string>
    <string name="textUsuario">Usuário</string>
    <string name="editTextUsuario"></string>
    <string name="editTextSenha"></string>
    <string name="textSenha">Senha</string>
    <string name="textEmail">Email</string>

    //REFERENCIAS DA TELA POMODORO
    <string name="textExplicacao">**** aqui você pode iniciar o temporizador para o método POMODORO</string>
    <string name="textTempo1">Tempo de foco:</string>
    <string name="textTempo2">Tempo de descanso:</string>
    <string name="textTempo3">Quantidade de pomos que deseja fazer:</string>
    <string name="button">INICIAR</string>
    <string name="button2">RELATÓRIO</string>
    <string name="textView8">Definir o tempo do pomodoro:</string>
    <string name="textView4">Resumo de Fotos</string>
    <string name="button3">O que é o método pomodoro</string>

    //REFERENCIAS DA TELA DE RESUMO ESCRITO

    <string name="subtitulo_tela">RESUMO ESCRITO</string>
    <string name="textTitulo">Título</string>
    <string name="textData">Data</string>
    <string name="textAnotacoes">Anotações</string>
    <string name="btSalvar">SALVAR</string>

    //REFERENCIAS DA TELA DE CONFIGURAÇÕES

    <string name="configuracao">Configurações</string>
    <string name="botao_deslogar">DESLOGAR DA SUA CONTA</string>
    <string name="criadores">Criadores</string>
    <string name="nome1">Gabriele Moura</string>
    <string name="nome2">Victor Nepomuceno</string>
    <string name="nome3"> Kevin Caldas</string>
    <string name="nome4"> Nicolli Franchini</string>
    <string name="idade1">17 anos</string>
    <string name="fim">TCC - I FOX</string>


    //nomes
    <string name="txtTitulo">FEED DE DICAS</string>
    <string name="txtNome1">.@Isabel_16</string>
    <string name="txtNome2">.@Http_Gil</string>
    <string name="txtNome3">.@Bebel</string>
    <string name="txtNome4">.@Andre_britto</string>
    <string name="txtNome5">.@Maria_Ju</string>
    <string name="txtNome6">.@Calvin</string>


    //posts
    <string name="txtpost1">Uma coisa que me salvou no enem foi ter repertório na hora da redação, isso é fundamental para conseguir garantir a tão sonhada nota 1000. É legal ver bastante filmes e séries com críticas sociais, também memorizar algumas citações genéricas, nome de autores e de livros também. Acreditem,os pequenos detalhes salvam a vida de nós estudantes.</string>
    <string name="txtpost2">Sabe o que super me ajuda quando eu to estudando? Nos momentos que eu dou uma parada comer um chocolate recupera 100% das minhas energias.</string>
    <string name="txtpost3">É importante ter momentos pra relaxar também, pegar uma onda, passear com os doguinhos, praticar uma atiividade fisica sair com os amigos... Sem isso não temos saúde para os estudos</string>
    <string name="txtpost4">Gente diquinha de ouro pra vocês. Eu sei que esses momentos que temos que ficar focados nos estudos são difíceis mas eu aprendi com uma maravilhosa como acalmar a ansiedade e focar melhor: MEDITAÇÃO  e YOGA juro gentee, salva vidas e ajuda no foco de uma forma surreal.</string>
    <string name="txtpost5">To prestando os vestibulares esse ano e tiveram livros que me salvaram na hora de fazer a prova. Vou dar algumas dicas pra vocês, leiam: 1. Dom Casmurro, de Machado de Assis, 2. O Cortiço, de Aluísio Azevedo, 3. Capitães de Areia, de Jorge Amado, 4. Memórias Póstumas de Brás Cubas, de Machado de Assis, 5. Grande Sertão: Veredas, de Guimarães Rosa.</string>

</resources>