<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bege"
    tools:context=".telas.TelaLogin">

    <TextView
        android:id="@+id/tvBemVindo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/boas_vindas"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/aclonica"
        android:text="I-FOX"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/tvBemVindo"
        app:layout_constraintStart_toStartOf="@+id/tvBemVindo"
        app:layout_constraintTop_toBottomOf="@+id/tvBemVindo" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/sue_ellen_francisco"
        android:text="@string/subtitulo_projeto"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:background="@drawable/shape_input_form"
            android:fontFamily="@font/pathway_gothic_one"
            android:gravity="center"
            android:text="@string/usuario"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/etUsuarioLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etUsuarioLogin"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/shape_input"
            android:ems="10"
            android:fontFamily="@font/pathway_gothic_one"
            android:gravity="center|start|center_horizontal"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:background="@drawable/shape_input_form"
            android:fontFamily="@font/pathway_gothic_one"
            android:gravity="center"
            android:text="@string/senha"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/etSenhaLogin"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etSenhaLogin"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/shape_input"
            android:ems="10"
            android:fontFamily="@font/pathway_gothic_one"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/preto"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvCadastresse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/pathway_gothic_one"
        android:pointerIcon="arrow"
        android:text="@string/cadastresse"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="206dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:height="70dp"
        android:backgroundTint="@color/laranjaClaro"
        android:fontFamily="@font/pathway_gothic_one"
        android:text="@string/logar"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCadastresse" />

</androidx.constraintlayout.widget.ConstraintLayout>